<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="bookmarkView"
            type="com.huy.mappies.model.BookmarkView" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/bookmark_details_app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/bookmark_details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/bookmark_details_place_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/bookmark_details_image_max_height"
                android:scaleType="centerCrop"
                android:src="@drawable/default_marker_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_details_name_label"
                    style="@style/BookmarkLabel"
                    android:text="@string/bookmark_details_name_label" />

                <EditText
                    android:id="@+id/bookmark_details_name_edit_text"
                    style="@style/BookmarkEditText"
                    android:hint="@string/bookmark_details_name_label"
                    android:inputType="text"
                    android:text="@{bookmarkView.name}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_details_category_label"
                    style="@style/BookmarkLabel"
                    android:layout_weight="0.4"
                    android:text="@string/bookmark_details_category_label"/>

                <ImageView
                    android:id="@+id/bookmark_details_category_icon"
                    android:layout_width="@dimen/category_icon_width"
                    android:layout_height="@dimen/category_icon_height"
                    android:src="@drawable/ic_other"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_gravity="bottom"/>

                <Spinner
                    android:id="@+id/bookmark_details_category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_details_notes_label"
                    style="@style/BookmarkLabel"
                    android:text="@string/bookmark_details_notes_label" />

                <EditText
                    android:id="@+id/bookmark_details_notes_edit_text"
                    style="@style/BookmarkEditText"
                    android:hint="@string/bookmark_details_notes_label"
                    android:inputType="text"
                    android:text="@{bookmarkView.notes}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_details_phone_label"
                    style="@style/BookmarkLabel"
                    android:text="@string/bookmark_details_phone_label" />

                <EditText
                    android:id="@+id/bookmark_details_phone_edit_text"
                    style="@style/BookmarkEditText"
                    android:hint="@string/bookmark_details_phone_label"
                    android:inputType="phone"
                    android:text="@{bookmarkView.phone}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bookmark_details_address_label"
                    style="@style/BookmarkLabel"
                    android:text="@string/bookmark_details_address_label" />

                <EditText
                    android:id="@+id/bookmark_details_address_edit_text"
                    style="@style/BookmarkEditText"
                    android:hint="@string/bookmark_details_address_label"
                    android:inputType="text"
                    android:text="@{bookmarkView.address}"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>